Gestion des comptes V3

--- a/templates/Candidat/gestion_candidats/modifier_candidats.html.twig
+++ b/templates/Candidat/gestion_candidats/modifier_candidats.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %} {% block title %}Modifier condidat {%
+{% extends 'base.html.twig' %} {% block title %}Modifier candidat {%
 endblock %} {% block body %}
 <div class="container">
   <h1 class="mt-4 ml-2">Modifier un candidat :</h1>
