--- a/templates/Candidat/gestion_candidats/ajouter_candidat.html.twig
+++ b/templates/Candidat/gestion_candidats/ajouter_candidat.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %} {% block title %}Ajouter condidat {%
+{% extends 'base.html.twig' %} {% block title %}Ajouter candidat {%
 endblock %} {% block body %}
 <div class="container">
   <h1 class="mt-4 ml-2">Ajouter un nouveau candidat :</h1>
