--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
         </div>
         {% else %}
                 <li><a href="/login">Login</a></li>
-                li><a href="/register">Subscribe</a></li>
+                <a href="/register">Subscribe</a></li>
     {% endif %}
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
