--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
+       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-
+        J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script> <script
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-
+        Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script> <script
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-
+        wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    {% block javascripts %}{% endblock %}
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-          <link rel="stylesheet" href="/css/bootstrap.min.css">
-         {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-        {% else %}
-                <li><a href="/login">Login</a></li>
-                <li><a href="/register">Subscribe</a></li>
-    {% endif %}
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-            <link rel="stylesheet" href="/css/bootstrap.min.css">
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
-
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
+       <link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-
+            Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+            crossorigin="anonymous">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-secondary mb-3">
+        <div class="container">
+        <a href='#' class="navbar-brand">Jobs For you</a>
+             {% if app.user %}
+            <div class="mb-3">
+                <div class="collapse navbar-collapse" id="mobile-nav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                        You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            {%else %}
+                <div class="collapse navbar-collapse" id="mobile-nav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a href="/login" style="color:#FFF">Login</a></li>
+                        <li class="nav-item" style="margin-left:20px;color:#FFFF;"><a href="/register"  style="color:#FFF">Register</a></li>
+                    </ul>
+                </div>
+             {% endif %}
+         </div>
+    </nav>
     </head>
     <body>
         {% block body %}{% endblock %}
