fixed Login route

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,7 +36,7 @@
             {%else %}
                 <div class="collapse navbar-collapse" id="mobile-nav">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a href="/login" style="color:#FFF">Login</a></li>
+                        <li class="nav-item"><a href="/" style="color:#FFF">Login</a></li>
                         <li class="nav-item" style="margin-left:20px;color:#FFFF;"><a href="/register"  style="color:#FFF">Register</a></li>
                     </ul>
                 </div>
