making relationship between the offre and categorie tables

--- a/templates/offre_emploi/offreEmploi.html.twig
+++ b/templates/offre_emploi/offreEmploi.html.twig
@@ -3,10 +3,7 @@
 {% block title %}Offre Emploi{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 2px; }
-</style>
+
 
 <div>
 
@@ -35,12 +32,12 @@
             <tr>
                 <td class="text-nowrap">{{o.id}}</td>
                 <td class="text-nowrap">{{o.Titre}}</td>
-                <td class="text-nowrap">{{o.Description}}</td>
+                <td class="text-nowrap">{{o.Description|length > 30 ? o.Description|slice(0, 30) ~ '...' : o.Description }}</td>
                 <td class="text-nowrap">{{o.Experience}}</td>
                 <td class="text-nowrap">{{o.Emplacement}}</td>
                 <td class="text-nowrap">{{o.TypeContrat}}</td>
                 <td class="text-nowrap">{{o.DateExpiration | date("d/m/Y")}}</td>
-                <td class="text-nowrap">{{o.createdAt | date("d/m/Y")}}</td>
+                <td class="text-nowrap">{{o.createdAt | date("d/m/Y","Africa/Tunis")}}</td>
                 <td class="text-nowrap">{% if o.etat == true %}
                                         active
                                         {% else %}
