--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <style>
+  .filter{
+    display:block;
+    position: sticky;
+    top:20px;
+  }
+  </style>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-
