--- a/templates/offre_emploi/VoirTous.html.twig
+++ b/templates/offre_emploi/VoirTous.html.twig
@@ -2,7 +2,16 @@
 {% block title %}Offre Emploi{% endblock %} 
 {% block body %}
 <div class="container">
-  <div>
+ <div class="row">
+  <div class="col-md-3">
+    {{ form_start(form,{attr:{class:'filter'}}) }}
+     <h4>Catégories </h4>
+     {{form_row(form.q)}}
+     {{form_row(form.categorie)}}
+    <button type="submit" class="btn btn-primary w-100">Filtrer</button>
+    {{ form_end(form) }}
+  </div>
+  <div class="col-md-9">
     {% for o in offres %}
     {% if o.etat %}
     <div class="card mb-3" style="max-width: 540px">
@@ -34,12 +43,11 @@
           </div>
         </div>
       </div>
-    </div>
-    {% endif %}
-    {% endfor %}
+      </div>
+      {% endif %}
+      {% endfor %}
+   
   </div>
-  <div class="pagination justify-content-center">
-    {{ knp_pagination_render(offres) }}
-  </div>
+ </div>
 </div>
 {% endblock %}
