--- a/templates/Administrateur/gestion_administrateurs/ajouter_administrateur.html.twig
+++ b/templates/Administrateur/gestion_administrateurs/ajouter_administrateur.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %} {% block title %}Ajouter recruteur {%
+{% extends 'dashboard.html.twig' %} {% block title %}Ajouter recruteur {%
 endblock %} {% block body %}
 <div class="container">
   <h1 class="mt-4 ml-2">Ajouter un nouveau administrateur :</h1>
