--- a/templates/Administrateur/gestion_administrateurs/modifier_administrateur.html.twig
+++ b/templates/Administrateur/gestion_administrateurs/modifier_administrateur.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %} {% block title %}Ajouter Administrateur {%
+{% extends 'dashboard.html.twig' %} {% block title %}Ajouter Administrateur {%
 endblock %} {% block body %}
 <div class="container">
   <h1 class="mt-4 ml-2">Modifier un Administrateur :</h1>
