--- a/templates/Administrateur/gestion_recruteurs/modifier_recruteur.html.twig
+++ b/templates/Administrateur/gestion_recruteurs/modifier_recruteur.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %} {% block title %}Ajouter recruteur {%
+{% extends 'dashboard.html.twig' %} {% block title %}Modifier recruteur {%
 endblock %} {% block body %}
 <div class="container">
   <h1 class="mt-4 ml-2">Modifier un recruteur :</h1>
