--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,13 @@
         wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+        <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-
+            Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     {% block javascripts %}
@@ -47,13 +54,7 @@ $('.custom-file-input').on('change', function(event) {
     {% endblock %}
     <meta charset="UTF-8" />
     <title>{% block title %}Welcome!{% endblock %}</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-
-            Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
+    {% block navbar %}
     <nav class="navbar navbar-expand-sm navbar-dark bg-secondary mb-3">
       <div class="container">
         <a href="#" class="navbar-brand">Jobs For you</a>
@@ -80,6 +81,7 @@ $('.custom-file-input').on('change', function(event) {
         {% endif %}
       </div>
     </nav>
+    {% endblock %}
   </head>
   <body>
     {% block body %}{% endblock %}
