Auto stash before merge of "Marouene" and "origin/main"

--- a/templates/offre_emploi/VoirTous.html.twig
+++ b/templates/offre_emploi/VoirTous.html.twig
@@ -14,23 +14,28 @@
   <div class="col-md-9">
     {% for o in offres %}
     {% if o.etat %}
-    <div class="card mb-3" style="max-width: 540px">
+    <div class="card mb-3" style="max-width: 100%">
       <div class="row no-gutters">
-        <div class="card-body" style="background-color: rgb(240, 240, 240)">
-          <h5 class="font-weight-bold">{{ o.titre }}</h5>
-          <p
+        <div class="card-body" style="max-width: 100%">
+          <a href="{{ path('voir_offre_en_detail',{id : o.id})}}" class="font-weight-bold text-primary"><h3>{{ o.titre }}</h3></a>
+          <h6
             class="card-text"
-            style="
-              text-overflow: ellipsis;
-              white-space: nowrap;
-              overflow: hidden;
-              width: 50rem;
-            "
+            
           >
-            {{ o.description }}
-          </p>
+            {{ o.description | length > 50 ? o.description | slice(0,50) ~ '...' : o.description }}
+          </h6>
 
           <div>
+            <p class="text-muted mb-0"><i class="far fa-building mr-1"></i>Web Creative.pvt.Ltd</p>
+                                                <ul class="list-inline mb-0">
+                                                    <li class="list-inline-item mr-3">
+                                                        <p class="text-muted mb-0"><i class="fas fa-map-marker-alt mr-1"></i>{{o.emplacement}}</p>
+                                                    </li>
+
+                                                    <li class="list-inline-item">
+                                                        <p class="text-muted mb-0"><i class="far fa-clock mr-1"></i>{{o.createdAt|date('d/m/Y',"Africa/Tunis") }}</p>
+                                                    </li>
+                                                </ul>
             <p class="card-text mb-0">
               <small
                 class="text-muted"
@@ -43,10 +48,13 @@
           </div>
         </div>
       </div>
-      </div>
+    </div>
       {% endif %}
       {% endfor %}
    
+  <div class="pagination justify-content-center">
+    {{ knp_pagination_render(offres) }}
+  </div>
   </div>
  </div>
 </div>
