--- a/templates/offre_emploi/VoirDetail.html.twig
+++ b/templates/offre_emploi/VoirDetail.html.twig
@@ -7,21 +7,21 @@
 <h1>Offre : </h1>
 <dl class="row ">
   <dt class="col-sm-3">ID</dt>
-  <dd class="col-sm-9"></span>{{offre.id}}</dd>
+  <dd class="col-sm-9">{{offre.id}}</dd>
   <dt class="col-sm-3">Titre</dt>
-  <dd class="col-sm-9"></span>{{offre.Titre}}</dd>
+  <dd class="col-sm-9">{{offre.Titre}}</dd>
   <dt class="col-sm-3">Description</dt>
-  <dd class="col-sm-9"></span>{{offre.Description}}</dd>
+  <dd class="col-sm-9">{{offre.Description}}</dd>
   <dt class="col-sm-3">Experience</dt>
-  <dd class="col-sm-9"></span>{{offre.Experience}}</dd>
+  <dd class="col-sm-9">{{offre.Experience}}</dd>
   <dt class="col-sm-3">Emplacement</dt>
-  <dd class="col-sm-9"></span>{{offre.Emplacement}}</dd>
+  <dd class="col-sm-9">{{offre.Emplacement}}</dd>
   <dt class="col-sm-3">Type de Contrat</dt>
-  <dd class="col-sm-9"></span>{{offre.TypeContrat}}</dd>
+  <dd class="col-sm-9">{{offre.TypeContrat}}</dd>
   <dt class="col-sm-3">Date d'expiration</dt>
-  <dd class="col-sm-9"></span>{{offre.DateExpiration| date("d/m/Y")}}</dd>
+  <dd class="col-sm-9">{{offre.DateExpiration| date("d/m/Y")}}</dd>
   <dt class="col-sm-3">Date d'ajout de l'offre</dt>
-  <dd class="col-sm-9"></span>{{offre.createdAt| date("d/m/Y")}}</dd>
+  <dd class="col-sm-9">{{offre.createdAt| date("d/m/Y")}}</dd>
  
   <dt class="col-sm-3">L'état de l'offre</dt>
   <dd class="col-sm-9" style="color: {{ offre.etat ? "green" : "red"}}"></span > {{ offre.etat ? "Disponible" : "Non disponible" }} 
