--- a/templates/Administrateur/gestion_recruteurs/ajouter_recruteur.html.twig
+++ b/templates/Administrateur/gestion_recruteurs/ajouter_recruteur.html.twig
@@ -1,11 +1,17 @@
-{% extends 'dashboard.html.twig' %} {% block title %}Ajouter recruteur {%
+{% extends 'base.html.twig' %} {% block title %}Ajouter recruteur {%
 endblock %} {% block body %}
 <div class="container">
   <h1 class="mt-4 ml-2">Ajouter un nouveau recruteur :</h1>
   {{ form_start(form) }}
-  <div class="col-6">{{ form_row(form.Nom) }}</div>
-  <div class="col-6">{{ form_row(form.Adresse) }}</div>
-  <div class="col-6">{{ form_row(form.Telephone) }}</div>
+ <div class="col-md-8">{{ form_start(form) }}</div>
+    <div class="col-md-8">{{ form_row(form.username) }}</div>
+    <div class="col-md-8">{{ form_row(form.email) }}</div>
+    <div class="col-md-8">{{ form_row(form.Nom) }}</div>
+    <div class="col-md-8">{{ form_row(form.Telephone) }}</div>
+    <div class="col-md-8">{{ form_row(form.Adresse) }}</div>
+    <div class="col-md-8">
+      {{ form_row(form.plainPassword, { label: "Password" }) }}
+    </div>
   {{ form_widget(form) }}
   <button class="ml-3 btn btn-primary mb-3">Ajouter</button>
   {{ form_end(form) }}
