--- a/templates/Administrateur/gestion_administrateurs/afficher_administrateur.html.twig
+++ b/templates/Administrateur/gestion_administrateurs/afficher_administrateur.html.twig
@@ -12,6 +12,8 @@
       <dd class="col-sm-9"></span>{{administrateur.Nom}}</dd>
       <dt class="col-sm-3">Prenom : </dt>
       <dd class="col-sm-9"></span>{{administrateur.Prenom}}</dd>
+      <dt class="col-sm-3">Email : </dt>
+      <dd class="col-sm-9"></span>{{administrateur.email}}</dd>
     </dl>
     <div class="d-flex">
           <a href="{{ path('Liste-Administrateurs')}}" class="btn btn-primary btn-sm mt-3">retour</a>
