--- a/templates/Administrateur/Dashboard/ListeRecruteurs.html.twig
+++ b/templates/Administrateur/Dashboard/ListeRecruteurs.html.twig
@@ -15,7 +15,7 @@ GestionComptesController!{% endblock %} {% block body %}
   <div class="container pl-0">
     <h2 class="my-1 font-weight-bold">Listes des recruteurs :</h2>
     <a href="{{ path('ajouter_recruteur') }}" class="btn btn-link pl-0"
-      >Ajouter recruteur</a
+      >Ajouter un recruteur</a
     >
     {% if recruteurs %}
     <table class="table">
