--- a/templates/offre_emploi/VoirTous.html.twig
+++ b/templates/offre_emploi/VoirTous.html.twig
@@ -27,7 +27,7 @@
               width: 50rem;
             "
           >
-            {{ o.description }}
+            {{ o.description |raw }}
           </p>
 
           <div>
