--- a/templates/Candidat/gestion_candidats/ajouter_candidat.html.twig
+++ b/templates/Candidat/gestion_candidats/ajouter_candidat.html.twig
@@ -4,11 +4,18 @@
 <div class="container   ">
   <h1 class="mt-4 ml-2">Ajouter un nouveau candidat :</h1>
   {{ form_start(form) }}
-  <div class="col-7">{{ form_row(form.Nom) }}</div>
-  <div class="col-7">{{ form_row(form.Prenom) }}</div>
-  <div class="col-7">{{ form_row(form.Age) }}</div>
-  <div class="col-7">{{ form_row(form.Email) }}</div>
-  <div class="col-7">{{ form_row(form.categorie) }}</div>
+  <div class="col-md-8">{{ form_start(form) }}</div>
+    <div class="col-md-8">{{ form_row(form.username) }}</div>
+    <div class="col-md-8">{{ form_row(form.email) }}</div>
+    <div class="col-md-8">{{ form_row(form.Nom) }}</div>
+    <div class="col-md-8">{{ form_row(form.Prenom) }}</div>
+    <div class="col-md-8">{{ form_row(form.Age) }}</div>
+    <div class="col-md-8">{{ form_row(form.Telephone) }}</div>
+    <div class="col-md-8">{{ form_row(form.Prenom) }}</div>
+    <div class="col-md-8">{{ form_row(form.Adresse) }}</div>
+    <div class="col-md-8">
+      {{ form_row(form.plainPassword, { label: "Password" }) }}
+    </div>
   {{ form_widget(form) }}
   <button class="ml-3 btn btn-primary mb-3">Ajouter</button>
   {{ form_end(form) }}
