--- a/templates/Candidat/gestion_candidats/modifier_candidats.html.twig
+++ b/templates/Candidat/gestion_candidats/modifier_candidats.html.twig
@@ -3,10 +3,17 @@ endblock %} {% block body %}
 <div class="container">
   <h1 class="mt-4 ml-2">Modifier un candidat :</h1>
   {{ form_start(form) }}
-  <div class="col-6">{{ form_row(form.Nom) }}</div>
-  <div class="col-6">{{ form_row(form.Prenom) }}</div>
-  <div class="col-6">{{ form_row(form.Age) }}</div>
-  <div class="col-6">{{ form_row(form.Email) }}</div>
+  <div class="col-md-8">{{ form_row(form.username) }}</div>
+    <div class="col-md-8">{{ form_row(form.email) }}</div>
+    <div class="col-md-8">{{ form_row(form.Nom) }}</div>
+    <div class="col-md-8">{{ form_row(form.Prenom) }}</div>
+    <div class="col-md-8">{{ form_row(form.Age) }}</div>
+    <div class="col-md-8">{{ form_row(form.Telephone) }}</div>
+    <div class="col-md-8">{{ form_row(form.Prenom) }}</div>
+    <div class="col-md-8">{{ form_row(form.Adresse) }}</div>
+    <div class="col-md-8">
+      {{ form_row(registrationForm.plainPassword, { label: "Password" }) }}
+    </div>
   {{ form_widget(form) }}
   <button class="ml-3 btn btn-warning mb-3">Modifier</button>
   {{ form_end(form) }}
