fixing some interfaces

--- a/templates/candidat_registration/index.html.twig
+++ b/templates/candidat_registration/index.html.twig
@@ -1,7 +1,9 @@
- {% extends 'base.html.twig' %} {% block title %}RegisterCandidat{% endblock %} {% block
-body %} {% for flashError in app.flashes('verify_email_error') %}
-<div class="alert alert-danger" role="alert">{{ flashError }}</div>
-{% endfor %}
+ {% extends 'base.html.twig' %}
+  {% block title %}RegisterCandidat{% endblock %} 
+  {% blockbody %} 
+    {% for flashError in app.flashes('verify_email_error') %}
+      <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+    {% endfor %}
 <div class="container">
   <h1>A little more</h1>
   <div class="row">
