--- a/templates/offre_emploi/VoirTous.html.twig
+++ b/templates/offre_emploi/VoirTous.html.twig
@@ -5,8 +5,9 @@
  <div class="row">
   <div class="col-md-3">
     {{ form_start(form,{attr:{class:'filter'}}) }}
-     <h4>Catégories </h4>
+     <h5>Rechercher </h5>
      {{form_row(form.q)}}
+     <h5>Filtrer </h5>
      {{form_row(form.categorie)}}
     <button type="submit" class="btn btn-primary w-100">Filtrer</button>
     {{ form_end(form) }}
@@ -29,12 +30,7 @@
                                                         <p class="text-muted mb-0"><i class="far fa-clock mr-1"></i>{{o.createdAt|date('d/m/Y',"Africa/Tunis") }}</p>
                                                     </li>
                                                 </ul>
-            <p class="card-text mb-0">
-              <small
-                class="text-muted"
-                >{{o.createdAt|date('d/m/Y',"Africa/Tunis") }}</small>
-            </p>
-              <span style="color: {{ o.etat ? "green" : "red"}}" > {{ o.etat ? "Disponible" : "non disponible" }}  </span>
+          
               <div class="d-flex justify-content-end">
               <a href="{{ path('voir_offre_en_detail',{id : o.id})}}" class="btn btn-primary rounded btn-sm ">Detail</a>
             </div>
