fixing and adding functionalities

--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -166,6 +166,7 @@
       <a href="{{ path('liste-Recruteurs') }}">Recruteurs</a>
       <a href="{{ path('Liste-Administrateurs') }}">Administrateurs</a>
       <a href="{{ path('Liste-Candidats') }}">Candidats</a>
+      <a href="{{ path('afficher-Regles') }}">Regles</a>
     </div>
 
     <div id="main" style="margin-left: 250px">
