inactive users management and integrating sidebar to all users

--- a/templates/Administrateur/Dashboard/ListeAdministrateurs.html.twig
+++ b/templates/Administrateur/Dashboard/ListeAdministrateurs.html.twig
@@ -14,7 +14,7 @@ GestionComptesController!{% endblock %} {% block body %}
 </style>
 
   <div class="container">
-    <h2 class="my-1 font-weight-bold">Listes des administrateurs :</h2>
+    <h2 class="my-1 font-weight-bold">Liste des administrateurs :</h2>
     <a href="{{ path('ajouter_administrateur') }}" class="btn btn-link pl-0"
       >Ajouter administrateur</a
     >
