--- a/templates/Administrateur/Dashboard/ListeCandidats.twig
+++ b/templates/Administrateur/Dashboard/ListeCandidats.twig
@@ -14,7 +14,7 @@ GestionComptesController!{% endblock %} {% block body %}
 </style>
 
 <div class="container">
-  <h2 class="my-1 font-weight-bold">Listes des candidats :</h2>
+  <h2 class="my-1 font-weight-bold">Liste des candidats :</h2>
      <a href="{{ path('ajouter_candidat') }}" class="btn btn-link pl-0"
       >Ajouter un candidat</a
     >
