--- a/templates/Administrateur/Dashboard/ListeRecruteurs.html.twig
+++ b/templates/Administrateur/Dashboard/ListeRecruteurs.html.twig
@@ -13,7 +13,7 @@ GestionComptesController!{% endblock %} {% block body %}
   }
 </style>
   <div class="container pl-0">
-    <h2 class="my-1 font-weight-bold">Listes des recruteurs :</h2>
+    <h2 class="my-1 font-weight-bold">Liste des recruteurs :</h2>
     <a href="{{ path('ajouter_recruteur') }}" class="btn btn-link pl-0"
       >Ajouter un recruteur</a
     >
