--- a/templates/Administrateur/Dashboard/Regles.html.twig
+++ b/templates/Administrateur/Dashboard/Regles.html.twig
@@ -20,7 +20,7 @@ GestionComptesController!{% endblock %} {% block body %}
     <thead class="thead-dark">
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Durée Inactif Max /Par jour</th>
+        <th scope="col">Durée Inactif Max (en jour)</th>
         <th scope="col">Nombre postulation maximal</th>
         <th scope="col">Action</th>
       </tr>
