--- a/templates/Candidat/Accueil/Accueil.html.twig
+++ b/templates/Candidat/Accueil/Accueil.html.twig
@@ -1,10 +1,10 @@
- {% extends 'base.html.twig' %} {% block title %}Accueil{% endblock %} {% block
+ {% extends 'dashboard.html.twig' %} {% block title %}Accueil{% endblock %} {% block
 body %}
 <div class="container">
   <h1>Weclome Candidate!</h1>
-   <a
+   {# <a
       href="{{ path('modifier_candidat', {id}) }}"
       class="btn btn-link btn-sm"
-    >modifier profil</a>
+    >modifier profil</a> #}
 </div>
 {% endblock %}
