--- a/templates/Recruteur/gestion_candidature.html.twig
+++ b/templates/Recruteur/gestion_candidature.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %} {% block title %}Hello GestionCondidature!{%
+{% extends 'dashboard.html.twig' %} {% block title %}Hello GestionCondidature!{%
 endblock %} {% block body %}
 <style>
   .example-wrapper {
