--- a/templates/offre_emploi/VoirTous.html.twig
+++ b/templates/offre_emploi/VoirTous.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %} 
+{% extends 'dashboard.html.twig' %} 
 {% block title %}Offre Emploi{% endblock %} 
 {% block body %}
 <div class="container">
