--- a/templates/Candidat/modifyProfile.html.twig
+++ b/templates/Candidat/modifyProfile.html.twig
@@ -1,4 +1,4 @@
- {% extends 'base.html.twig' %} {% block title %}Modify Profile{% endblock %} {% block
+ {% extends 'dashboard.html.twig' %} {% block title %}Modify Profile{% endblock %} {% block
 body %} {% for flashError in app.flashes('verify_email_error') %}
 <div class="alert alert-danger" role="alert">{{ flashError }}</div>
 {% endfor %}
