--- a/templates/Administrateur/gestion_administrateurs/afficher_administrateur.html.twig
+++ b/templates/Administrateur/gestion_administrateurs/afficher_administrateur.html.twig
@@ -16,7 +16,7 @@
       <dd class="col-sm-9"></span>{{administrateur.email}}</dd>
     </dl>
     <div class="d-flex">
-          <a href="{{ path('Liste-Administrateurs')}}" class="btn btn-primary btn-sm mt-3">retour</a>
+          <a href="{{ path('Liste-Administrateurs')}}" class="btn btn-primary btn-sm mt-3"><i class="fas fa-chevron-left"></i> retour</a>
       <div>
    </div>
 {% endblock %}
