--- a/templates/Administrateur/Dashboard/ListeCandidats.twig
+++ b/templates/Administrateur/Dashboard/ListeCandidats.twig
@@ -14,9 +14,9 @@ GestionComptesController!{% endblock %} {% block body %}
 </style>
 
 <div class="container">
-  <h2 class="my-1 font-weight-bold">Liste des candidats :</h2>
-     <a href="{{ path('ajouter_candidat') }}" class="btn btn-link pl-0"
-      >Ajouter un candidat</a
+  <h2 class="my-1 font-weight-bold">Listes des candidats :</h2>
+     <a href="{{ path('ajouter_candidat') }}" class="btn btn-sm btn-primary mb-1 pl-0"
+      ><i class="fas fa-plus">  </i> Ajouter un candidat</a
     >
   {% if candidats %}
   <table class="table">
@@ -41,21 +41,21 @@ GestionComptesController!{% endblock %} {% block body %}
         <td class="text-nowrap">{{ v.Email }}</td>
         <td class="d-flex">
           <a
-            href="{{ path('supprimer_candidat', { id: v.id }) }}"
-            class="btn btn-link btn-sm"
-            >supprimer</a
+            href="{{ path('Accueil_Candidat', { id: v.id }) }}"
+            class="btn btn-primary btn-sm"
+            ><i class="fas fa-search-plus"></i></a
           >
-            |
+            &nbsp;
             <a
               href="{{ path('modifier_candidatpadmin', { id: v.id }) }}"
-              class="btn btn-link btn-sm"
-              >modifier</a
+              class="btn btn-warning btn-sm"
+              ><i class="fas fa-edit"></i></a
             >
-            |
+            &nbsp;
             <a
               href="{{ path('supprimer_candidat', { id: v.id }) }}"
-              class="btn btn-sm btn-link"
-              >supprimer</a
+              class="btn btn-sm btn-danger"
+              ><i class="fas fa-trash-alt"></i></a
             >
         </td>
       </tr>
