--- a/templates/Administrateur/Dashboard/ListeRecruteurs.html.twig
+++ b/templates/Administrateur/Dashboard/ListeRecruteurs.html.twig
@@ -13,9 +13,9 @@ GestionComptesController!{% endblock %} {% block body %}
   }
 </style>
   <div class="container pl-0">
-    <h2 class="my-1 font-weight-bold">Liste des recruteurs :</h2>
-    <a href="{{ path('ajouter_recruteur') }}" class="btn btn-link pl-0"
-      >Ajouter un recruteur</a
+    <h2 class="my-1 font-weight-bold">Listes des recruteurs :</h2>
+    <a href="{{ path('ajouter_recruteur') }}" class="btn btn-primary btn-sm mb-1 pl-0"
+      ><i class="fas fa-plus">  </i> Ajouter un recruteur</a
     >
     {% if recruteurs %}
     <table class="table">
@@ -39,20 +39,20 @@ GestionComptesController!{% endblock %} {% block body %}
           <td class="d-flex">
             <a
               href="{{ path('afficher_recruteur', { id: v.id }) }}"
-              class="btn btn-link btn-sm"
-              >afficher</a
+              class="btn btn-primary btn-sm"
+              ><i class="fas fa-search-plus"></i></a
             >
-            |
+            &nbsp;
             <a
               href="{{ path('modifier_recruteur', { id: v.id }) }}"
-              class="btn btn-link btn-sm"
-              >modifier</a
+              class="btn btn-warning btn-sm"
+              ><i class="fas fa-edit"></i></a
             >
-            |
+            &nbsp;
             <a
               href="{{ path('supprimer_recruteur', { id: v.id }) }}"
-              class="btn btn-sm btn-link"
-              >supprimer</a
+              class="btn btn-sm btn-danger"
+              ><i class="fas fa-trash-alt"></i></a
             >
           </td>
         </tr>
