--- a/templates/emails/emailTemplate.html.twig
+++ b/templates/emails/emailTemplate.html.twig
@@ -1,5 +1,3 @@
-{% extends 'base.html.twig' %}
-{% block title %}Envoyer Email{% endblock %} 
 {% block body %} 
 <div class="container">
  <p>
@@ -11,7 +9,7 @@ Afin de procéder à une étude approfondie de votre candidature, nous souhaiter
 
 Nous nous tenons à votre disposition  pour toutes précisions qu’il vous plairait de nous demander.
 
-Nous vous remercions de bien vouloir prendre contact avec notre service recrutement le plus rapidement possible afin que nous puissions nous rencontrer.
+Nous vous remercions de bien vouloir prendre contact avec notre service recrutement le plus rapidement possible afin que nous puissions nous rencontrer.<br/>
 
 Cordialement,
 </p>
