--- a/templates/offre_emploi/offreEmploi.html.twig
+++ b/templates/offre_emploi/offreEmploi.html.twig
@@ -8,14 +8,13 @@
  <div>
   <div class="container-fluid">
   <h2 class="my-5 font-weight-bold" >Listes des offres d'emplois :</h2>
-  <a href="{{ path('ajouter_offre') }}" class="btn btn-link">ajouter une offre</a>
+  <a href="{{ path('ajouter_offre') }}" class="btn btn-primary btn-sm mb-1"><i class="fas fa-plus"></i> ajouter une offre</a>
 
     <table class="table">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">Id</th>
                 <th scope="col">Titre</th>
-                <th scope="col">Description </th>
                 <th scope="col">Experience</th>
                 <th scope="col">Emplacement</th>
                 <th scope="col text-nowrap">Type de Contrat</th>
@@ -31,7 +30,6 @@
             <tr>
                 <td class="text-nowrap">{{o.id}}</td>
                 <td class="text-nowrap">{{o.Titre}}</td>
-                <td class="text-nowrap">{{(o.Description|raw)|length > 30 ? (o.Description|raw)|slice(0, 30) ~ '...' : o.Description|raw }}</td>
                 <td class="text-nowrap">{{o.Experience}}</td>
                 <td class="text-nowrap">{{o.Emplacement}}</td>
                 <td class="text-nowrap">{{o.TypeContrat}}</td>
