--- a/templates/Recruteur/gestion_candidature.html.twig
+++ b/templates/Recruteur/gestion_candidature.html.twig
@@ -17,6 +17,15 @@ endblock %} {% block body %}
   <div class="container pl-0">
     <h2 class="my-1 font-weight-bold">Listes des candidatures :</h2>
     {% if Candidatures %}
+     {% for o in Offre %}
+        <dt class="my-1 font-weight-bold">
+          Offre :
+          <span>{{ o.titre }}</span>
+        </dt>
+        {% for c in Candidatures %}
+        {% if o.id == c.Offre_id %}
+    
+
     <table class="table">
       <thead class="thead-dark">
         <tr>
@@ -30,17 +39,17 @@ endblock %} {% block body %}
         </tr>
       </thead>
       <tbody>
-        {% for v in Candidatures %}
+       
         <tr>
           <td class="text-nowrap">{{ loop.index }}</td>
-          <td class="text-nowrap">{{ v.prenom }}</td>
-          <td class="text-nowrap">{{ v.nom }}</td>
-          <td class="text-nowrap">{{ v.age }}</td>
-          <td class="text-nowrap">{{ v.experience }}</td>
+          <td class="text-nowrap">{{ c.prenom }}</td>
+          <td class="text-nowrap">{{ c.nom }}</td>
+          <td class="text-nowrap">{{ c.age }}</td>
+          <td class="text-nowrap">{{ c.experience }}</td>
           <td class="text-nowrap">
             <a
               href="{{
-                path('telecharger_candidature_cv', { filename: v.CvFilename })
+                path('telecharger_candidature_cv', { filename: c.CvFilename })
               }}"
               class="btn btn-primary rounded btn-sm"
               >télécharger</a
@@ -48,19 +57,21 @@ endblock %} {% block body %}
           </td>
           <td class="d-flex">
             <a
-              href="{{ path('supprimer_candidature', { id: v.id }) }}"
+              href="{{ path('supprimer_candidature', { id: c.id }) }}"
               class="btn btn-danger rounded btn-sm"
               >✘</a
             >
 
             <a
-              href="{{ path('fixer-rendez-vous', { id: v.id }) }}"
+              href="{{ path('fixer-rendez-vous', { Prenom: c.Prenom,Nom:c.Nom,Email:c.Email,Offre:o.Titre}) }}"
               class="btn btn-success rounded btn-sm mx-2"
               ><span style="font-weight: bold">&#10003;</span></a
             >
           </td>
         </tr>
 
+        {% endif %}
+        {% endfor %}
         {% endfor %} {% else %}
         <h3 class="mt-5 d-flex justify-content-center">
           pas des candidatures trouvée :(
