--- a/templates/offre_emploi/VoirDetail.html.twig
+++ b/templates/offre_emploi/VoirDetail.html.twig
@@ -22,7 +22,8 @@
     <dt class="col-sm-3">Date d'ajout de l'offre</dt>
     <dd class="col-sm-9"></span>{{offre.createdAt| date("d/m/Y")}}</dd>
      <div class="d-flex">
-     <a href="{{ path('consulter_tous_les_offres')}}" class="btn btn-primary rounded btn-sm mt-3">retour</a>    
+     <a href="{{ path('consulter_tous_les_offres')}}" class="btn btn-primary rounded btn-sm mt-3 ml-3">retour</a>
+    <a href="{{ path('ajouter_candidature',{rec_id : offre.RecruteurId,offre_id : offre.id})}}" class="btn btn-success rounded btn-sm mt-3 ml-2">postuler</a>    
      <div>
 </dl>
 </div>
