--- a/templates/offre_emploi/VoirTous.html.twig
+++ b/templates/offre_emploi/VoirTous.html.twig
@@ -20,7 +20,7 @@
         <div class="card-body" style="max-width: 100%">
           <a href="{{ path('voir_offre_en_detail',{id : o.id})}}" class="font-weight-bold text-primary"><h3>{{ o.titre }}</h3></a>
           <div>
-            <p class="text-muted mb-0"><i class="far fa-building mr-1"></i>Web Creative.pvt.Ltd</p>
+            <p class="text-muted mb-0"><i class="far fa-building mr-1"></i>{{o.NomEntrprise}}</p>
                                                 <ul class="list-inline mb-0">
                                                     <li class="list-inline-item mr-3">
                                                         <p class="text-muted mb-0"><i class="fas fa-map-marker-alt mr-1"></i>{{o.emplacement}}</p>
@@ -37,7 +37,7 @@
           </div>
         </div>
       </div>
-    </div>
+      </div>
       {% endif %}
       {% endfor %}
    
