added protected routes and finished the rule management system

--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -200,6 +200,7 @@
       {% if app.user.getRole() =="ROLE_RECRUTEUR" %}
       <a href="{{ path('afficher_tousCandidature') }}">Candidatures</a>
       <a href="{{ path('offre_emploi') }}">Mes Offres d'emploi</a>
+      <a href="{{ path('categorie') }}">Gestion Categories</a>
       {% endif %}
     </div>
 
