--- a/templates/Categorie/ajouterCategorie.html.twig
+++ b/templates/Categorie/ajouterCategorie.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'dashboard.html.twig' %}
 {% block title %}Ajouter Categorie {% endblock %} 
 {% block body %}
 <div class="container">
