added a logo and some functionalities

--- a/templates/Administrateur/Dashboard/ListeInactifs.html.twig
+++ b/templates/Administrateur/Dashboard/ListeInactifs.html.twig
@@ -40,8 +40,8 @@ GestionComptesController!{% endblock %} {% block body %}
         <td class="d-flex">
           <a
             href="{{ path('supprimer_candidat', { id: v.id }) }}"
-            class="btn btn-link btn-sm"
-            >supprimer</a
+            class="btn btn-sm btn-danger"
+            ><i class="fas fa-trash-alt"></i></a
           >
         </td>
       </tr>
