--- a/templates/Administrateur/Dashboard/ListeCandidats.twig
+++ b/templates/Administrateur/Dashboard/ListeCandidats.twig
@@ -15,9 +15,9 @@ GestionComptesController!{% endblock %} {% block body %}
 
 <div class="container">
   <h2 class="my-1 font-weight-bold">Listes des candidats :</h2>
-     <a href="{{ path('ajouter_candidat') }}" class="btn btn-sm btn-primary mb-1 pl-0"
+     {# <a href="{{ path('ajouter_candidat') }}" class="btn btn-sm btn-primary mb-1 pl-0"
       ><i class="fas fa-plus">  </i> Ajouter un candidat</a
-    >
+    > #}
   {% if candidats %}
   <table class="table">
     <thead class="thead-dark">
@@ -40,7 +40,7 @@ GestionComptesController!{% endblock %} {% block body %}
         <td class="text-nowrap">{{ v.Age }}</td>
         <td class="text-nowrap">{{ v.Email }}</td>
         <td class="d-flex">
-          <a
+          {# <a
             href="{{ path('Accueil_Candidat', { id: v.id }) }}"
             class="btn btn-primary btn-sm"
             ><i class="fas fa-search-plus"></i></a
@@ -51,7 +51,7 @@ GestionComptesController!{% endblock %} {% block body %}
               class="btn btn-warning btn-sm"
               ><i class="fas fa-edit"></i></a
             >
-            &nbsp;
+            &nbsp; #}
             <a
               href="{{ path('supprimer_candidat', { id: v.id }) }}"
               class="btn btn-sm btn-danger"
