--- a/templates/Recruteur/Acceptees.html.twig
+++ b/templates/Recruteur/Acceptees.html.twig
@@ -10,7 +10,7 @@
   <div class="row">
   </div>
 {{ form_widget(form) }}
-<button class="btn btn-primary rounded btn-md" >créer</button>
+<button class="btn btn-primary rounded btn-md" >envoyer</button>
 {{ form_end(form) }}
   </div>
 {% endblock %}
