--- a/templates/offre_emploi/voirOffre.html.twig
+++ b/templates/offre_emploi/voirOffre.html.twig
@@ -34,7 +34,7 @@
 </dl> 
     <div class="d-flex">
         <a href="{{ path('ajouter_offre')}}" class="btn btn-success rounded btn-sm mt-3">retour</a>
-        <a href="{{ path('ajouter_candidature',{offre.id})}}" class="btn btn-primary rounded btn-sm mt-3">postuler</a>
+{# <a href="{{ path('ajouter_candidature',{rec_id :id : offre.id})}}" class="btn btn-primary rounded btn-sm mt-3">postuler</a> #}
     <div>
     </div>
 {% endblock %}
