last commit to fix some changes

--- a/templates/emails/emailTemplate.html.twig
+++ b/templates/emails/emailTemplate.html.twig
@@ -1,11 +1,11 @@
 {% block body %} 
 <div class="container">
  <p>
-Monsieur,<br/>
+Monsieur {{donner.nom}},<br/>
 
-A la suite de nos différents entretiens, nous avons le plaisir de vous informer que votre candidature au poste de  %nom de poste%, a été retenue.
+A la suite de nos différents entretiens, nous avons le plaisir de vous informer que votre candidature au poste de  "{{donner.offre}}", a été retenue.
 
-Afin de procéder à une étude approfondie de votre candidature, nous souhaiterions avoir un entretien complémentaire  avec vous et vous faire passer une série de tests.
+Afin de procéder à une étude approfondie de votre candidature, nous souhaiterions avoir un entretien complémentaire  avec vous le {{donner.DateRendezVous}} et vous faire passer une série de tests.
 
 Nous nous tenons à votre disposition  pour toutes précisions qu’il vous plairait de nous demander.
 
